spacing fix for ssh generator

--- a/css/inner/settings/ssh.less
+++ b/css/inner/settings/ssh.less
@@ -24,7 +24,7 @@
     }
   }
   .with-ssh, .no-ssh {
-    margin-top: 3vw;
+    margin: 1.5em 0 1em 0;
   }
   .with-ssh {
     textarea {
